Bug 137559 - UI: page scroll bar not functioning properly (dragging not responding; not properly positioned when scrolling) (painting issue; Skia)
Summary: UI: page scroll bar not functioning properly (dragging not responding; not pr...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
: 137975 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-10-17 16:21 UTC by Telesto
Modified: 2020-11-14 11:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (19.46 KB, application/vnd.oasis.opendocument.text)
2020-10-17 16:22 UTC, Telesto
Details
Bibisect log (2.89 KB, text/plain)
2020-11-07 21:01 UTC, Telesto
Details
Screencast (13.99 MB, video/mp4)
2020-11-11 13:04 UTC, Telesto
Details
screenshot of double slider (3.57 KB, image/png)
2020-11-12 01:43 UTC, TorrAB
Details
screenshot of double slider merged into one piece (3.22 KB, image/png)
2020-11-12 01:45 UTC, TorrAB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-10-17 16:21:46 UTC
Description:
UI: page scroll bar not functioning properly (dragging not responding; not properly positioned when scrolling)

Steps to Reproduce:
1. Open the attached file
2. Click the vertical scroll bar and drag down -> Not responding
3. Scroll down to bottom (or using page down key and scroll up)

-> Skia painting issue

Actual Results:
Position off

Expected Results:
Proper position


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 94e6e140491de31c0788c91af855a75a3bb12709
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-10-17 16:22:12 UTC
Created attachment 166462 [details]
Example file
Comment 2 Telesto 2020-11-04 11:14:25 UTC
*** Bug 137975 has been marked as a duplicate of this bug. ***
Comment 3 Kevin Suo 2020-11-07 10:20:15 UTC
I do not reproduce with either 94e6e140491de31c0788c91af855a75a3bb12709 or today's master on Linux Fedora 32.

Telesto: would you please retest to see whether you can reproduce with a most recent master? I yes, then could you try to bibisect, following the instructions on the wiki page:
https://wiki.documentfoundation.org/QA/Bibisect

(Bibisecting is not that hard! And it's fun and helpful for bug fixes)
Comment 4 Telesto 2020-11-07 19:11:29 UTC
(In reply to Kevin Suo from comment #3)
> I do not reproduce with either 94e6e140491de31c0788c91af855a75a3bb12709 or
> today's master on Linux Fedora 32.
> 
> Telesto: would you please retest to see whether you can reproduce with a
> most recent master? I yes, then could you try to bibisect, following the
> instructions on the wiki page:
> https://wiki.documentfoundation.org/QA/Bibisect
> 
> (Bibisecting is not that hard! And it's fun and helpful for bug fixes)

This is likely a Skia issue; not sure if ran in Linux Skia mode
Bibisecting is not that hard! And it's fun and helpful for bug fixes)

BTW: Not totally new around here ;-). And have done number of bibisect already. 
Fun, matter of preference :D. This is luckily for me a straight forward bibisect
Comment 5 Telesto 2020-11-07 21:01:34 UTC
Created attachment 167083 [details]
Bibisect log

Bisected to:
author	Luboš Luňák <l.lunak@collabora.com>	2020-10-06 22:14:36 +0200
committer	Luboš Luňák <l.lunak@collabora.com>	2020-10-08 13:40:14 +0200
commit d18731f71c60cbb6c02cabb042004b1aa9454de8 (patch)
tree 36870456fc84f62b2ab85a3bad1971641856cbda
parent 47fda617fc4dad8273919227ca45ea3b8b61aea1 (diff)
track dirty areas for Skia drawing
Updates to the screen in raster mode aren't _that_ slow, in fact
it seems using SkRegion can make things slower because of manipulating
the region, but with SkIRect this could sometimes help a bit.
It also appears that StretchDIBits() that is used by the Windows
raster code doesn't work correctly if only a subset of the y-axis
range is specified, which reduces the usefulness.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=d18731f71c60cbb6c02cabb042004b1aa9454de8
Comment 6 Telesto 2020-11-07 21:02:04 UTC
Setting to NEW by duplicate + bibisect
Comment 7 Telesto 2020-11-07 21:03:36 UTC
Adding CC: to Luboš Luňák
Comment 8 Luboš Luňák 2020-11-11 11:08:12 UTC
I cannot reproduce. And the information is contradictory, you say it's Skia, but the system info in the original comment says Skia is not enabled. So what exactly is the setup to reproduce this?
Comment 9 Telesto 2020-11-11 13:04:38 UTC
Created attachment 167201 [details]
Screencast

(In reply to Luboš Luňák from comment #8)
> I cannot reproduce. And the information is contradictory, you say it's Skia,
> but the system info in the original comment says Skia is not enabled. So
> what exactly is the setup to reproduce this?

That's because I tested Skia first, switched to GDI (to compare) and copy/pasted that they about
Comment 10 TorrAB 2020-11-12 01:40:21 UTC
	To observe the bug, start near the end of a multi-page *.odt file, and scroll up; the slider is double: one very thin one that moves normally, and the thick, normal-looking slider that lags behind —doubleSlider.png.
	After I wrote this screenshot, the thick slider spontaneously caught up with the thin one —doubleSlide.png. It seems that the slider simply redisplays too slowly.
Comment 11 TorrAB 2020-11-12 01:43:28 UTC
Created attachment 167226 [details]
screenshot of double slider
Comment 12 TorrAB 2020-11-12 01:45:41 UTC
Created attachment 167227 [details]
screenshot of double slider merged into one piece
Comment 13 Commit Notification 2020-11-14 11:21:47 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/96f5152486a28d77050dc114e293431afddf5142

fix updates of Skia draw region for Windows widgets (tdf#137559)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.