fix updates of Skia draw region for Windows widgets (tdf#137559)

Change-Id: I787c427dd17334095d5b2d90c6a9670d58ee9a4a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105762
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>